// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`permissions shows the apply permission template modal 1`] = `
<ApplyTemplate
  onClose={[Function]}
  project={
    {
      "id": "foo",
      "key": "foo",
      "name": "Foo",
      "qualifier": "TRK",
      "visibility": "private",
    }
  }
/>
`;

exports[`renders correctly 1`] = `
<Fragment>
  <ActionsDropdown
    onOpen={[Function]}
  >
    <ActionsDropdownItem
      className="js-apply-template"
      onClick={[Function]}
    >
      projects_role.apply_template
    </ActionsDropdownItem>
  </ActionsDropdown>
</Fragment>
`;

exports[`restore access shows the restore access modal 1`] = `
<RestoreAccessModal
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "groups": [],
      "isLoggedIn": true,
      "login": "luke",
      "name": "Skywalker",
      "scmAccounts": [],
    }
  }
  onClose={[Function]}
  onRestoreAccess={[Function]}
  project={
    {
      "id": "foo",
      "key": "foo",
      "name": "Foo",
      "qualifier": "TRK",
      "visibility": "private",
    }
  }
/>
`;
